Template File Configuration Moved to MAINAPP of the Project

--- a/django_docker_project/templates/travello/index.html
+++ b/django_docker_project/templates/travello/index.html
@@ -70,11 +70,11 @@
             <ul>
                 <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
                 <li><a class="nav-link scrollto" href="create/player">Create Player</a></li>
-                <li><a class="nav-link scrollto" href="#about">About</a></li>
-                <li><a class="nav-link scrollto" href="#about-player-us">Player Info</a></li>
+<!--                <li><a class="nav-link scrollto" href="#about">About</a></li>-->
+                <li><a class="nav-link scrollto" href="#about-player-us">About Players</a></li>
                 <li><a class="nav-link scrollto" href="/calc">Calculator</a></li>
-                <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-                <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
+                <li><a class="nav-link scrollto " href="/learn-flexbox">Learn FlexBox</a></li>
+<!--                <li><a class="nav-link scrollto" href="#team">Team</a></li>-->
                 <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
                     <ul>
                         <li><a href="#">Drop Down 1</a></li>
