- Flexbox Tutorials File(horizontal & vertical HTML files) Added in Navbar

--- a/django_docker_project/templates/travello/index.html
+++ b/django_docker_project/templates/travello/index.html
@@ -73,7 +73,7 @@
 <!--                <li><a class="nav-link scrollto" href="#about">About</a></li>-->
                 <li><a class="nav-link scrollto" href="#about-player-us">About Players</a></li>
                 <li><a class="nav-link scrollto" href="/calc">Calculator</a></li>
-                <li><a class="nav-link scrollto " href="/learn-flexbox">Learn FlexBox</a></li>
+                <li><a class="nav-link scrollto " href="/learn-flexbox-horizontal">Learn FlexBox</a></li>
 <!--                <li><a class="nav-link scrollto" href="#team">Team</a></li>-->
                 <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
                     <ul>
