- made separated App called `flexbox_tutorial` for all the Flexbox Tutorials

--- a/django_docker_project/templates/flexbox_tutorial/learn-flexbox-horizontal.html
+++ b/django_docker_project/templates/flexbox_tutorial/learn-flexbox-horizontal.html
@@ -1,4 +1,4 @@
-{% extends 'mainApp/navbar.html'%}
+{% extends 'flexbox_tutorial/navbar.html'%}
 <!--{% include 'mainApp/navbar.html' with is_active=True message='Hello from parent template!' %}-->
 {% block navbar_content %}
 
