--- a/django_docker_project/templates/flexbox_tutorial/navbar.html
+++ b/django_docker_project/templates/flexbox_tutorial/navbar.html
@@ -26,8 +26,8 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a class="nav-link" href="/">Home</a></li>
-                    <li><a class="nav-link" href="/learn-flexbox-horizontal">Flexbox Horizontal</a></li>
-                    <li><a class="nav-link" href="/learn-flexbox-vertical">Flexbox Vertical</a></li>
+                    <li><a class="nav-link" href="/flexbox-tutorial/horizontal">Flexbox Horizontal</a></li>
+                    <li><a class="nav-link" href="/flexbox-tutorial/vertical">Flexbox Vertical</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
