--- a/django_docker_project/templates/travello/index.html
+++ b/django_docker_project/templates/travello/index.html
@@ -46,7 +46,7 @@
 <section id="topbar" class="d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
         <div class="contact-info d-flex align-items-center">
-            <i class="bi bi-envelope-fill"></i><a href="mailto:contact@example.com">anantaakash.podder@gmail.com</a>
+            <i class="bi bi-envelope-fill"></i><a href="mailto:anantaakash.podder@gmail.com">anantaakash.podder@gmail.com</a>
             <i class="bi bi-phone-fill phone-icon"></i> +880177***208
         </div>
         <div class="social-links d-none d-md-block">
@@ -72,7 +72,7 @@
                 <li><a class="nav-link scrollto" href="create/player">Create Player</a></li>
                 <li><a class="nav-link scrollto" href="#about-player-us">About Players</a></li>
                 <li><a class="nav-link scrollto" href="/calc">Calculator</a></li>
-                <li><a class="nav-link scrollto " href="/learn-flexbox-horizontal">Learn FlexBox</a></li>
+                <li><a class="nav-link scrollto " href="/flexbox-tutorial/horizontal">Learn FlexBox</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
