--- a/django_docker_project/templates/flexbox_tutorial/learn-flexbox-horizontal.html
+++ b/django_docker_project/templates/flexbox_tutorial/learn-flexbox-horizontal.html
@@ -7,7 +7,7 @@
         <h3>Horizontal use Justify Content</h3>
 
         <div class="mt-4"></div>
-        <h4>Default Flexbox (<a class="" href="/learn-flexbox-vertical">Code</a>)</h4>
+        <h4>Default Flexbox (<a class="" href="{% url 'show_flexbox_code' 'akash'%}">Code</a>)</h4>
         <div class="d-flex bg-dark">
             <div class="text-white p-2 bg-success">Item 1</div>
             <div class="text-white p-2 bg-primary">Item 2</div>
