-  Vertical Flexbox Codes are added in `FlexboxTutorialsUtils` class

--- a/django_docker_project/templates/flexbox_tutorial/learn-flexbox-vertical.html
+++ b/django_docker_project/templates/flexbox_tutorial/learn-flexbox-vertical.html
@@ -8,7 +8,7 @@
 
         <h6>Here all STYLES HEIGHT is 100px</h6>
         <div class="mt-4"></div>
-        <h4>Justify Content Start</h4>
+        <h4>Justify Content Start (<a class="" style="color: red;" href="{% url 'show_flexbox_code' 'Justify-Content-Start'%}">Code</a>)</h4>
         <div class="d-flex justify-content-start bg-dark" style="height: 100px;">
             <div class="text-white p-2 bg-success">Item 1</div>
             <div class="text-white p-2 bg-primary">Item 2</div>
@@ -21,7 +21,7 @@
 
         
         <div class="mt-4"></div>
-        <h4>Align Items Start</h4>
+        <h4>Align Items Start (<a class="" style="color: red;" href="{% url 'show_flexbox_code' 'Align-Items-Start'%}">Code</a>)</h4>
         <div class="d-flex align-items-start bg-dark" style="height: 100px;">
             <div class="text-white p-2 bg-success">Item 1</div>
             <div class="text-white p-2 bg-primary">Item 2</div>
@@ -29,7 +29,7 @@
         </div>
 
         <div class="mt-4"></div>
-        <h4>Align Items End</h4>
+        <h4>Align Items End (<a class="" style="color: red;" href="{% url 'show_flexbox_code' 'Align-Items-End'%}">Code</a>)</h4>
         <div class="d-flex align-items-end bg-dark" style="height: 100px;">
             <div class="text-white p-2 bg-success">Item 1</div>
             <div class="text-white p-2 bg-primary">Item 2</div>
@@ -37,7 +37,7 @@
         </div>
 
         <div class="mt-4"></div>
-        <h4>Align Items Center</h4>
+        <h4>Align Items Center (<a class="" style="color: red;" href="{% url 'show_flexbox_code' 'Align-Items-Center'%}">Code</a>)</h4>
         <div class="d-flex align-items-center bg-dark" style="height: 100px;">
             <div class="text-white p-2 bg-success">Item 1</div>
             <div class="text-white p-2 bg-primary">Item 2</div>
@@ -45,7 +45,7 @@
         </div>
 
         <div class="mt-4"></div>
-        <h4>Align Items Center + Justy Content Center</h4>
+        <h4>Align Items Center + Justy Content Center (<a class="" style="color: red;" href="{% url 'show_flexbox_code' 'Align-Items-Center-Justy-Content-Center'%}">Code</a>)</h4>
         <div class="d-flex align-items-center justify-content-center bg-dark" style="height: 100px;">
             <div class="text-white p-2 bg-success">Item 1</div>
             <div class="text-white p-2 bg-primary">Item 2</div>
@@ -53,7 +53,7 @@
         </div>
 
         <div class="mt-4"></div>
-        <h4>Justy Content No-Wrap(Default Behaviour)</h4>
+        <h4>Justy Content No-Wrap(Default Behaviour) (<a class="" style="color: red;" href="{% url 'show_flexbox_code' 'Justy-Content-No-Wrap'%}">Code</a>)</h4>
         <div class="d-flex justify-content-around flex-nowrap bg-dark">
             <div class="text-white p-2 bg-success">Item 1</div>
             <div class="text-white p-2 bg-primary">Item 2</div>
@@ -85,7 +85,7 @@
         </div>
 
         <div class="mt-4"></div>
-        <h4>Justy Content Wrap</h4>
+        <h4>Justy Content Wrap (<a class="" style="color: red;" href="{% url 'show_flexbox_code' 'Justy-Content-Wrap'%}">Code</a>)</h4>
         <div class="d-flex justify-content-around flex-wrap bg-dark">
             <div class="text-white p-2 bg-success">Item 1</div>
             <div class="text-white p-2 bg-primary">Item 2</div>
