-  Added COPY Mechanism in Flexbox_Tutorial Section & also used STATIC Through Out index.html

--- a/django_docker_project/templates/flexbox_tutorial/learn-flexbox-vertical.html
+++ b/django_docker_project/templates/flexbox_tutorial/learn-flexbox-vertical.html
@@ -1,5 +1,7 @@
 {% extends 'flexbox_tutorial/navbar.html'%}
 
+{% load static %}
+
 {% block navbar_content %}
         
     <div class="container" style="background-color: green;color: white;">
