--- a/django_docker_project/templates/flexbox_tutorial/learn-flexbox-horizontal.html
+++ b/django_docker_project/templates/flexbox_tutorial/learn-flexbox-horizontal.html
@@ -1,5 +1,7 @@
 {% extends 'flexbox_tutorial/navbar.html'%}
 <!--{% include 'mainApp/navbar.html' with is_active=True message='Hello from parent template!' %}-->
+
+{% load static %}
 {% block navbar_content %}
 
     <div class="container" style="background-color: green; color: white;">
