--- a/django_docker_project/templates/travello/index.html
+++ b/django_docker_project/templates/travello/index.html
@@ -105,12 +105,11 @@
             <div class="carousel-item" style="background-image: url({% static 'img/slide/slide-2.jpg' %})">
                 <div class="carousel-container">
                     <div class="container">
-                        <h2 class="animate__animated animate__fadeInDown">Lorem Ipsum Dolor</h2>
-                        <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid.
-                            Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut.
-                            Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et
-                            tempore modi architecto.</p>
-                        <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read
+                        <h2 class="animate__animated animate__fadeInDown">Learn About Flexbox</h2>
+                        <p class="animate__animated animate__fadeInUp">You can see all types of Flexbox Tutorials and also
+                        copy and paste code from the section
+                        </p>
+                        <a href="{% url 'learn_flexbox_horizontal' %}" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read
                             More</a>
                     </div>
                 </div>
@@ -120,12 +119,12 @@
             <div class="carousel-item" style="background-image: url({% static 'img/slide/slide-3.jpg' %}">
                 <div class="carousel-container">
                     <div class="container">
-                        <h2 class="animate__animated animate__fadeInDown">Sequi ea ut et est quaerat</h2>
-                        <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid.
-                            Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut.
-                            Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et
-                            tempore modi architecto.</p>
-                        <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read
+                        <h2 class="animate__animated animate__fadeInDown">Learning Django REST API with Create Player</h2>
+                        <p class="animate__animated animate__fadeInUp">It is used for learning purpose of
+                            Django REST Framework. First Create a Player. Then you can easily access all the
+                            players information from the Public API
+                        </p>
+                        <a href="/create/player" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read
                             More</a>
                     </div>
                 </div>
