--- a/django_docker_project/templates/travello/index.html
+++ b/django_docker_project/templates/travello/index.html
@@ -71,6 +71,7 @@
                 <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
                 <li><a class="nav-link scrollto" href="create/player">Create Player</a></li>
                 <li><a class="nav-link scrollto" href="#about-player-us">About Players</a></li>
+                <li><a class="nav-link scrollto" href="create/footballclub">Create Football Club</a></li>
                 <li><a class="nav-link scrollto" href="/calc">Calculator</a></li>
                 <li><a class="nav-link scrollto " href="/flexbox-tutorial/horizontal">Learn FlexBox</a></li>
             </ul>
