--- a/django_docker_project/templates/travello/index.html
+++ b/django_docker_project/templates/travello/index.html
@@ -302,66 +302,29 @@
         <div class="container">
 
             <div class="section-title">
-                <h2>Team</h2>
-                <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-                    consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
-                    fugiat sit in iste officiis commodi quidem hic quas.</p>
+                <h2>Football Teams</h2>
+                <p>Here are some information about some of the Greatest Footballs in the World of Football.</p>
             </div>
 
             <div class="row">
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                    <div class="member">
-                        <img src="{% static 'img/team/team-1.jpg' %}" alt="">
-                        <h4>Walter White</h4>
-                        <span>Chief Executive Officer</span>
-                        <p>
-                            Magni qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat
-                            qui aut aut aut
-                        </p>
-                        <div class="social">
-                            <a href=""><i class="bi bi-twitter"></i></a>
-                            <a href=""><i class="bi bi-facebook"></i></a>
-                            <a href=""><i class="bi bi-instagram"></i></a>
-                            <a href=""><i class="bi bi-linkedin"></i></a>
+                {% for club in clubs %}
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+                        <div class="member">
+                            <img src="{{MEDIA_URL}}{{club.img}}" alt="">
+                            <h4>{{club.name}}</h4>
+                            <span>Worth: {{club.price}} Millions</span>
+                            <p>
+                                {{club.desc}}
+                            </p>
+    <!--                        <div class="social">-->
+    <!--                            <a href=""><i class="bi bi-twitter"></i></a>-->
+    <!--                            <a href=""><i class="bi bi-facebook"></i></a>-->
+    <!--                            <a href=""><i class="bi bi-instagram"></i></a>-->
+    <!--                            <a href=""><i class="bi bi-linkedin"></i></a>-->
+    <!--                        </div>-->
                         </div>
                     </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                    <div class="member">
-                        <img src="{% static 'img/team/team-2.jpg' %}" alt="">
-                        <h4>Sarah Jhinson</h4>
-                        <span>Product Manager</span>
-                        <p>
-                            Repellat fugiat adipisci nemo illum nesciunt voluptas repellendus. In architecto rerum rerum
-                            temporibus
-                        </p>
-                        <div class="social">
-                            <a href=""><i class="bi bi-twitter"></i></a>
-                            <a href=""><i class="bi bi-facebook"></i></a>
-                            <a href=""><i class="bi bi-instagram"></i></a>
-                            <a href=""><i class="bi bi-linkedin"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                    <div class="member">
-                        <img src="{% static 'img/team/team-3.jpg' %}" alt="">
-                        <h4>William Anderson</h4>
-                        <span>CTO</span>
-                        <p>
-                            Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro
-                            des clara
-                        </p>
-                        <div class="social">
-                            <a href=""><i class="bi bi-twitter"></i></a>
-                            <a href=""><i class="bi bi-facebook"></i></a>
-                            <a href=""><i class="bi bi-instagram"></i></a>
-                            <a href=""><i class="bi bi-linkedin"></i></a>
-                        </div>
-                    </div>
-                </div>
+                {% endfor %}
 
             </div>
 
