-  Create Player with image Feature added

--- a/django_docker_project/templates/travello/create_player.html
+++ b/django_docker_project/templates/travello/create_player.html
@@ -3,7 +3,8 @@
 {% block content %}
 
     <h1>Create Player</h1>
-    <form method="post">
+    <!--enctype="multipart/form-data" nah dile FILE input hisave ney nah-->
+    <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Submit</button>
