--- a/django_docker_project/templates/travello/create_footballclub.html
+++ b/django_docker_project/templates/travello/create_footballclub.html
@@ -3,6 +3,7 @@
 {% block content %}
 
     <h1>Create Football Club</h1>
+    <!--enctype="multipart/form-data" nah dile FILE input hisave ney nah-->
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
