--- a/django_docker_project/templates/travello/index.html
+++ b/django_docker_project/templates/travello/index.html
@@ -74,6 +74,7 @@
                 <li><a class="nav-link scrollto" href="create/footballclub">Create Football Club</a></li>
                 <li><a class="nav-link scrollto" href="/calc">Calculator</a></li>
                 <li><a class="nav-link scrollto " href="/flexbox-tutorial/horizontal">Learn FlexBox</a></li>
+                <li><a class="nav-link scrollto " href="/learn-celery-tutorial/theory">Learn Celery</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
