--- a/django_docker_project/templates/learn_celery_tutorial/navbar.html
+++ b/django_docker_project/templates/learn_celery_tutorial/navbar.html
@@ -28,6 +28,7 @@
                     <li><a class="nav-link" href="/">Home</a></li>
                     <li><a class="nav-link" href="/learn-celery-tutorial/theory">Learn Theory</a></li>
                     <li><a class="nav-link" href="/learn-celery-tutorial/configuration-steps">Configuration Steps</a></li>
+                    <li><a class="nav-link scrollto" href="/learn-celery-tutorial/add-number">Add Number Example</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
