- configuration_steps Text added in HTML & Also Seperate `css` file has been created for `container-class` of individual Apps of the Project

--- a/django_docker_project/templates/flexbox_tutorial/learn-flexbox-horizontal.html
+++ b/django_docker_project/templates/flexbox_tutorial/learn-flexbox-horizontal.html
@@ -4,7 +4,7 @@
 {% load static %}
 {% block navbar_content %}
 
-    <div class="container" style="background-color: green; color: white;">
+    <div class="container custom-style-container">
         <h1>Horizontal Tutorial</h1>
         <h3>Horizontal use Justify Content</h3>
 
@@ -47,9 +47,6 @@
             <div class="text-white p-2 bg-primary order-1">Item 2</div>
             <div class="text-white p-2 bg-danger order-2">Item 3</div>
         </div>
-
-        <!-- to have gap in the last -->
-        <div class="mb-4"></div>
 
     </div>
 
