--- a/django_docker_project/templates/flexbox_tutorial/show-flexbox-code.html
+++ b/django_docker_project/templates/flexbox_tutorial/show-flexbox-code.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block navbar_content %}
-    <div class="container" style="background-color: green; color: white;">
+    <div class="container custom-style-container">
         <div class="d-flex justify-content-between">
             <div id="html_code">
                 {{code_str|linebreaksbr|safe}}
