--- a/django_docker_project/templates/learn_celery_tutorial/learn_theory.html
+++ b/django_docker_project/templates/learn_celery_tutorial/learn_theory.html
@@ -4,7 +4,7 @@
 {% load static %}
 {% block navbar_content %}
 
-    <div class="container" style="background-color: green; color: white;">
+    <div class="container custom-style-container">
         <h1>Learn Theory</h1>
         <img src="{% static 'img/learn_celery_tutorial/Celery_Work_Flow.jpg' %}" alt="">
 
@@ -21,9 +21,6 @@
         <li>
             Step-2
         </li>
-
-        <!-- to have gap in the last -->
-        <div class="mb-4"></div>
 
     </div>
 
