--- a/django_docker_project/templates/flexbox_tutorial/learn-flexbox-vertical.html
+++ b/django_docker_project/templates/flexbox_tutorial/learn-flexbox-vertical.html
@@ -4,7 +4,7 @@
 
 {% block navbar_content %}
         
-    <div class="container" style="background-color: green;color: white;">
+    <div class="container custom-style-container">
         <h1>Vertical Tutorial</h1>
         <h3>Vertical use Align Items</h3>
 
@@ -117,9 +117,6 @@
             <div class="text-white p-2 bg-primary">Item 2</div>
             <div class="text-white p-2 bg-danger">Item 3</div>
         </div>
-
-        <!-- to have gap in the last -->
-        <div class="mb-4"></div>
 
     </div>
 
