- `travello` app Normal Views Converted into CLASS-BASED views

--- a/django_docker_project/templates/travello/index.html
+++ b/django_docker_project/templates/travello/index.html
@@ -70,7 +70,7 @@
             <ul>
                 <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
                 <li><a class="nav-link scrollto" href="create/player">Create Player</a></li>
-                <li><a class="nav-link scrollto" href="#about-player-us">About Players</a></li>
+                <li><a class="nav-link scrollto" href="#about-players">About Players</a></li>
                 <li><a class="nav-link scrollto" href="create/footballclub">Create Football Club</a></li>
                 <li><a class="nav-link scrollto " href="/flexbox-tutorial/horizontal">Learn FlexBox</a></li>
                 <li><a class="nav-link scrollto " href="/learn-celery-tutorial/theory">Learn Celery</a></li>
@@ -147,7 +147,7 @@
 <main id="main">
 
     <!-- ======= Players Section ======= -->
-    <section id="player" class="team section-bg">
+    <section id="about-players" class="team section-bg">
         <div class="container">
 
             <div class="section-title">
