- NavBar `email` `mailto` property added Properly

--- a/django_docker_project/templates/travello/index.html
+++ b/django_docker_project/templates/travello/index.html
@@ -47,7 +47,7 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
         <div class="contact-info d-flex align-items-center">
             <i class="bi bi-envelope-fill"></i><a href="mailto:anantaakash.podder@gmail.com">anantaakash.podder@gmail.com</a>
-            <i class="bi bi-phone-fill phone-icon"></i> +880177***208
+            <i class="bi bi-phone-fill phone-icon"></i> +88017****208
         </div>
         <div class="social-links d-none d-md-block">
             <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
@@ -254,7 +254,7 @@
                         <div class="phone">
                             <i class="bi bi-phone"></i>
                             <h4>Call:</h4>
-                            <p>+880177***208</p>
+                            <p>+88017****208</p>
                         </div>
 
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14606.067940181749!2d90.34947030085405!3d23.76459789694614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c09f9ba3d447%3A0x1babce9f1c6c95a3!2sMohammadpur%2C%20Dhaka%2C%20Bangladesh!5e0!3m2!1sen!2sus!4v1684480182810!5m2!1sen!2sus"
