- Instructions in learn_theory.html of `learn_celery_tutorial` App Module has been updated

--- a/django_docker_project/static/css/learn_celery_tutorial/learn_celery_tutorial_main.css
+++ b/django_docker_project/static/css/learn_celery_tutorial/learn_celery_tutorial_main.css
@@ -3,3 +3,13 @@ pre {
     border: 1px solid #999;
     display: block;
 }
+
+ol {
+  counter-reset: item;
+  list-style-type: none;
+}
+
+li.numbered-class:before {
+  content: counter(item) ". ";
+  counter-increment: item;
+}
