- CELERY_BEAT ---> `Number Counter` added for Learning `Scheduled` Task at a Particular Interval of time

--- a/django_docker_project/templates/learn_celery_tutorial/navbar.html
+++ b/django_docker_project/templates/learn_celery_tutorial/navbar.html
@@ -30,6 +30,7 @@
                     <li><a class="nav-link" href="/learn-celery-tutorial/theory">Learn Theory</a></li>
                     <li><a class="nav-link" href="/learn-celery-tutorial/configuration-steps">Configuration Steps</a></li>
                     <li><a class="nav-link scrollto" href="/learn-celery-tutorial/add-number">Add Number(Celery)</a></li>
+                    <li><a class="nav-link scrollto" href="/learn-celery-tutorial/number-counter-periodic-scheduled-task">Clock Counter(Celery Beat)</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
