- `redis` Cache Added in Project & Also added `number_counter_celery_beat` full mechanism added

--- a/django_docker_project/templates/learn_celery_tutorial/number_counter_celery_beat.html
+++ b/django_docker_project/templates/learn_celery_tutorial/number_counter_celery_beat.html
@@ -3,6 +3,9 @@
 {% load static %}
 {% block navbar_content %}
 
+    <!-- JS file to Update the Result Field by Call AJAX Jquery   -->
+    <script src="{% static 'js/learn_celery_tutorial/number_counter_update_view.js' %}"></script>
+
     <div class="container custom-style-container">
         <h1>Number Counter</h1>
         <div id="result">{{result}}</div>
